# spreadsheet-rescue

./: .gitattributes  .gitignore  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml  sample_config.json
.github/workflows/: test.yml
demo/: demo_config.json  demo_dirty.csv
demo/release_verified/: release_verified_changes.json  release_verified_changes.md  release_verified_cleaned.csv
scripts/: generate_demo.py
spreadsheet_rescue/: __init__.py  __main__.py  cli.py  config.py  engine.py
tests/: __init__.py  test_rescue.py
